Content fix + Alignment fix

--- a/src/styles/MainContent.css
+++ b/src/styles/MainContent.css
@@ -11,6 +11,7 @@ section {
 
 h1 {
     margin-top: 0;
+    font-family: "Jetbrains Mono", monospace;
 }
 
 html {
