--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,80 +1,98 @@
 .sidebar {
-    width: 300px;
-    height: 100vh;
-    background-color: #1a1a1a;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20px;
-    position: fixed;
-    left: 0;
-    top: 0;
-    border-right: 1px solid #2c2c2c;
-    padding-left: 10px;
-    padding-right: 10px;
+  width: 300px;
+  height: 100vh;
+  background-color: #1a1a1a;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  border-right: 1px solid #2c2c2c;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .profile {
-    text-align: center;
+  text-align: center;
+  font-family: "Schibsted Grotesk", sans-serif;
+}
+
+.profile p {
+  margin-top: 0px;
+}
+
+.profile h2 {
+  margin-bottom: 0px;
+  margin-top: 5px;
 }
 
 .profile-image {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-bottom: 10px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-bottom: 10px;
 }
 
 .menu {
-    grid-row-gap: 1rem;
-    flex-direction: column;
-    flex: 1;
-    width: 100%;
-    align-items: left;
-    padding-top: 20px;
-    
-    
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-    display: flex;
-    position: relative;
+  grid-row-gap: 1rem;
+  flex-direction: column;
+  flex: 1;
+  width: 100%;
+  align-items: left;
+  padding-top: 20px;
+
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  display: flex;
+  position: relative;
 }
 
 .menu a {
-    display: flex;
-    align-items: center;
-    color: #ffffff;
-    font-weight: 500;
-    text-decoration: none;
-    
-    transition: color 0.25s;
-    padding: 5px 20px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  text-decoration: none;
+  font-family: "Schibsted Grotesk", sans-serif;
+
+  transition: color 0.25s;
+  padding: 5px 20px;
 }
 
-
 .menu a .icon {
-    margin-right: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 .menu a:hover {
-    color: #7f7f7f;
-    border: 1px solid #535353;
-    border-radius: 10px;
-    
-    
+  color: #7f7f7f;
+  border: 1px solid #535353;
+  border-radius: 10px;
 }
 
 .menu a:hover ~ .menu::before {
-    transform: translateY(calc(var(--i) * 100%));
+  transform: translateY(calc(var(--i) * 100%));
 }
 
-.menu a:nth-child(1):hover ~ .menu::before { --i: 0; }
-.menu a:nth-child(2):hover ~ .menu::before { --i: 1; }
-.menu a:nth-child(3):hover ~ .menu::before { --i: 2; }
-.menu a:nth-child(4):hover ~ .menu::before { --i: 3; }
-.menu a:nth-child(5):hover ~ .menu::before { --i: 4; }
-.menu a:nth-child(6):hover ~ .menu::before { --i: 5; }
-.menu a:nth-child(7):hover ~ .menu::before { --i: 6; }
-
-
+.menu a:nth-child(1):hover ~ .menu::before {
+  --i: 0;
+}
+.menu a:nth-child(2):hover ~ .menu::before {
+  --i: 1;
+}
+.menu a:nth-child(3):hover ~ .menu::before {
+  --i: 2;
+}
+.menu a:nth-child(4):hover ~ .menu::before {
+  --i: 3;
+}
+.menu a:nth-child(5):hover ~ .menu::before {
+  --i: 4;
+}
+.menu a:nth-child(6):hover ~ .menu::before {
+  --i: 5;
+}
+.menu a:nth-child(7):hover ~ .menu::before {
+  --i: 6;
+}
